# slides

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  slides.dockerfile
doc/: flowchart_modello_eng.xml
docker/: docker-compose.yml  docker-compose.yml.template  docker-compose_oauth2.yml.fede  docker-compose_oauth2.yml.template  prestart.sh  slides.dockerfile  slides.run  slides2.dockerfile
minimocas/: CMakeLists.txt  README.md  build.ps1  build.sh
minimocas/cmake/Deprecated/: FindFLTK.cmake  FindLibLZMA.cmake
minimocas/cmake/Modules/: FindAravis.cmake  FindCURLpp.cmake  FindFFTW.cmake  FindGRASS.cmake  FindKML.cmake  FindLibRt.cmake  FindLibSSH.cmake  FindLibXmlpp.cmake  FindLibgrafX11.cmake  FindLibgraflib.cmake  FindLibkernlib.cmake  FindLibmathlib.cmake  FindLibpacklib.cmake  FindLibphtools.cmake  FindMKL.cmake  FindMiniZip.cmake  FindShapelib.cmake  FindUriParser.cmake  Findsqlite3.cmake
minimocas/python/tools/: map_maker.py  parse_poi_kml.py  sim_heat.py  sim_map.py  sim_plot.py  synthvscam_plot.py  timetable_generator.py
minimocas/src/app/: sim_engine.cpp
minimocas/src/lib/: carto.cpp  carto.h  carto_bestpath.cpp  carto_edit.cpp  connection.cpp  connection.h  connection.hpp  pawn.cpp  pawn.h  simulation.cpp  simulation.h  simulation_io.cpp
minimocas/src/utils/: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  makefile
minimocas/src/utils/physycom/: combexplosion.hpp  combinatoric.hpp  geometry.hpp  gnssconv.hpp  histo.hpp  jser.hpp  jsontohtml.hpp  md5.hpp  string.hpp  time.hpp  voronoi.hpp
minimocas/src/utils/test/: catch.hpp  test_combinatoric.cpp  test_gnssconv.cpp  test_histo.cpp  test_split.cpp
python/: conf.py  db_kml.py  db_mongo.py  ferrara_aveanomaly.py  ferrara_counting.py  ferrara_localnorm.py  ferrara_tot.py  model.py  model_bari.py  model_dubrovnik.py  model_ferrara.py  model_slides.py  model_slides_ferrara.py  model_sybenik.py  security.py  sim-ws-oauth2.py  sim-ws.py
schema/: schema_request.json
src/: slides_python_interface.cpp  slides_tools.cpp
tools/: dump_sniffer.py  ferrara_view.py  fluxes_map.py  foliumheat.py  foliumheat_bari.py  foliumheat_venezia.py  hca-curves.py  hca-mats.py  heatmap-server.py  od-sniffer.py  presence-sniffer.py  validate_sniffer.py
tools/bari/: camera_analysis.py  camera_dump.py  camera_map.py  data_analysis.py
tools/dubrovnik/: data_dump.py  data_dump.py35  data_parse.py  data_presence.py  data_validate.py  router_analysis.py  router_localanomaly.py  router_map.py  router_tracker.py  router_validate.py
tools/ferrara/: check_mysql.sql  ferrara_localnorm.py  ferrara_view.py  pro-0-counting.py  pro-1-ave.py  pro-2-l2norm.py  pro-3-localanomaly.py  pro-viewave.py  sniffer_count_tracker.py  sniffer_days_compare.py  sniffer_dump.py  sniffer_forecast.py  sniffer_map.py  sniffer_od.py  sniffer_presence.py  sniffer_stack_time.py  sniffer_validate.py
tools/sybenik/: camera_analysis.py  check_cam.sql  detection_engine.py  detection_svc.py  ingestion_engine.py  ingestion_setupdb.py  ingestion_setupdb_slides.py  ingestion_svc.py  utils.sql
tools/sybenik/data/: cam_data.json
tools/sybenik/models/: deepsort.py
tools/sybenik/utils/: detection_utils.py
tools/venezia/: README.md  detection_engine.py  ingestion_engine.py  ingestion_setupdb.py  service_template.service
tools/venezia/data/: cam_data.json
tools/venezia/utils/: detection_utils.py  general.py
tools/web/: heatmap.html
utils/: mongo_example.js  scan_geojson.sh  scan_sim.sh  scan_ws.py  scan_ws.sh  sim_folium.py  sim_plotter.py  sim_stats.py  sim_wroutes.py
utils/report/: sim_plotter.py  sim_stats.py  sim_wroutes.py
utils/web/: heatmap.html
vars/: conf.json.docker  conf.json.local.ch
vars/cart/: bari.pnt  bari.pro  dubrovnik.pnt  dubrovnik.pro  ferrara.pnt  ferrara.pro  sybenik.pnt  sybenik.pro  venezia.pnt  venezia.pro
vars/conf/: README.txt  conf.json.docker  conf.json.local.ch
vars/extra/: bari_cameras.json  dubrovnik_router.json  dubrovnik_sniffer.json  ferrara.fluxes  ferrara_sniffer.json
vars/templates/: bari_template.json.in  dubrovnik_template.json.in  ferrara_template.json.in  sybenik_template.json.in  venezia_template.json.in
